-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 16, 17
-
Component/s: hotspot
-
b21
-
aix
On AIX, in os::attempt_reserve_memory_at(), if the user specified a wish address too close to the BRK segment, we silently ignore the wish address and just map anywhere.
This is not the right behavior since the normal behavior when failing to map to a wish address is to return NULL (seeJDK-8266419). Therefore we should return NULL in these cases instead.
This is a day zero bug.
This is not the right behavior since the normal behavior when failing to map to a wish address is to return NULL (see
This is a day zero bug.
- relates to
-
JDK-8266222 [aix] In mmap-mode, partial releases with os::release_memory may trash internal bookkeeping
-
- Resolved
-
-
JDK-8266419 [aix] in mmap mode, os::attempt_reserve_memory_at() fails to handle wrong mapping address
-
- Resolved
-