8266506: [aix] Treat mapping attempt too close to BRK as a mapping error

Reviewed-by: mdoerr